--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-  background-color: rgb(232, 250, 230);
+    background-image: url('https://www.sienge.com.br/wp-content/uploads/l%C3%A2mpadas-1.png');
 }
 
 h1 {
