--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url('https://www.sienge.com.br/wp-content/uploads/l%C3%A2mpadas-1.png');
+    background-image: url('https://ensin-e.edu.br/wp-content/uploads/2021/06/lampadas-incandescentes-97d88040.jpg');
 }
 
 h1 {
